# chatgpt-pro-mcp

./: .gitignore  NOTICES.md  README.md  config.example.toml  install.sh  pyproject.toml  requirements.txt  server.py
openai_mcp/: auth.py  backend.py  server.py  setup.py  sse.py
openai_mcp/_vendored/: pow.py  turnstile.py
openai_mcp/tools/: __init__.py  writes.py
tests/: test_sse.py  test_writes.py
